--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,11 +6,8 @@
     right:0px;
     bottom:0px;
     left:0px;
+    overflow: auto; 
 }
-
-/* .Content{
-
-} */
 
 .Content .Row{
     display: flex;
@@ -19,6 +16,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    min-height: 53.3em;
 }
 .Content .Col{
     display: flex;
@@ -28,13 +26,6 @@
     align-items: center;
     justify-content: center;
     flex: 1;
-
-    /* DELETE LATER, JUST FOR TESTING */
-    
-    
-    /* border: solid magenta; */
-
-
 }
 
 .Content .main {
@@ -48,5 +39,4 @@
 .Content .main .question{
     color: #6b0000;
     font-size: 25pt;
-    
 }
